--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,23 +9,40 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.0'
+//        classpath 'com.android.tools.build:gradle:7.2.0'
+        classpath 'com.android.tools.build:gradle:7.4.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+//
+//        compile 'com.google.code.gson:gson:2.7'
+
+
     }
 }
+
+
 
 allprojects {
     repositories {
         google()
         mavenCentral()
     }
+
 }
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
+dependencies{
+    implementation 'com.google.code.gson:gson:2.8.2'
+
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
+
+}
+
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
